added subscriptions pause and resume
