# openapi.json
@@ -12,6 +12,7 @@
             "in": "query",
             "description": "The unique identifier of the product",
             "schema": {
+              "example": "prod_1234567890",
               "type": "string"
             }
           }
@@ -211,6 +212,7 @@
             "in": "query",
             "description": "The unique identifier of the subscription",
             "schema": {
+              "example": "sub_1234567890",
               "type": "string"
             }
           }
@@ -343,6 +345,62 @@
         }
       }
     },
+    "/v1/subscriptions/{id}/pause": {
+      "post": {
+        "operationId": "pauseSubscription",
+        "summary": "Pause a subscription.",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully paused a subscription",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SubscriptionEntity"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/subscriptions/{id}/resume": {
+      "post": {
+        "operationId": "resumeSubscription",
+        "summary": "Resume a paused subscription.",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully resumed a subscription",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SubscriptionEntity"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/checkouts": {
       "get": {
         "operationId": "retrieveCheckout",
@@ -352,7 +410,9 @@
             "name": "checkout_id",
             "required": true,
             "in": "query",
+            "description": "The ID of the checkout session to retrieve.",
             "schema": {
+              "example": "chk_1234567890",
               "type": "string"
             }
           }
@@ -590,6 +650,7 @@
             "in": "query",
             "description": "The unique identifier of the transaction",
             "schema": {
+              "example": "txn_1234567890",
               "type": "string"
             }
           }
@@ -686,14 +747,10 @@
   "tags": [],
   "servers": [
     {
-      "url": "https://api.creem.io",
-      "description": "Production API",
-      "x-speakeasy-server-id": "production"
+      "url": "https://api.creem.io"
     },
     {
-      "url": "https://test-api.creem.io",
-      "description": "Test API",
-      "x-speakeasy-server-id": "test"
+      "url": "https://test-api.creem.io"
     }
   ],
   "components": {
@@ -715,7 +772,11 @@
             "example": "Get access to discord server."
           }
         },
-        "required": ["id", "type", "description"]
+        "required": [
+          "id",
+          "type",
+          "description"
+        ]
       },
       "ProductEntity": {
         "type": "object",
@@ -726,7 +787,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -786,7 +851,11 @@
           "tax_category": {
             "type": "string",
             "description": "Categorizes the type of product or service for tax purposes. This helps determine the applicable tax rules based on the nature of the item or service.",
-            "example": ["saas", "digital-goods-service", "ebooks"]
+            "example": [
+              "saas",
+              "digital-goods-service",
+              "ebooks"
+            ]
           },
           "product_url": {
             "type": "string",
@@ -887,7 +956,10 @@
             ]
           }
         },
-        "required": ["items", "pagination"]
+        "required": [
+          "items",
+          "pagination"
+        ]
       },
       "Text": {
         "type": "object",
@@ -917,7 +989,10 @@
           "type": {
             "type": "string",
             "description": "The type of the field.",
-            "enum": ["text", "checkbox"],
+            "enum": [
+              "text",
+              "checkbox"
+            ],
             "example": "text"
           },
           "key": {
@@ -951,7 +1026,11 @@
             ]
           }
         },
-        "required": ["type", "key", "label"]
+        "required": [
+          "type",
+          "key",
+          "label"
+        ]
       },
       "CreateProductRequestEntity": {
         "type": "object",
@@ -998,7 +1077,11 @@
           "tax_category": {
             "type": "string",
             "description": "Categorizes the type of product or service for tax purposes. This helps determine the applicable tax rules based on the nature of the item or service.",
-            "example": ["saas", "digital-goods-service", "ebooks"]
+            "example": [
+              "saas",
+              "digital-goods-service",
+              "ebooks"
+            ]
           },
           "default_success_url": {
             "type": "string",
@@ -1018,7 +1101,12 @@
             "default": false
           }
         },
-        "required": ["name", "price", "currency", "billing_type"]
+        "required": [
+          "name",
+          "price",
+          "currency",
+          "billing_type"
+        ]
       },
       "CustomerEntity": {
         "type": "object",
@@ -1029,7 +1117,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1094,7 +1186,10 @@
             ]
           }
         },
-        "required": ["items", "pagination"]
+        "required": [
+          "items",
+          "pagination"
+        ]
       },
       "CreateCustomerPortalLinkRequestEntity": {
         "type": "object",
@@ -1104,7 +1199,9 @@
             "description": "Unique identifier of the customer."
           }
         },
-        "required": ["customer_id"]
+        "required": [
+          "customer_id"
+        ]
       },
       "CustomerLinksEntity": {
         "type": "object",
@@ -1114,7 +1211,9 @@
             "description": "Customer portal link."
           }
         },
-        "required": ["customer_portal_link"]
+        "required": [
+          "customer_portal_link"
+        ]
       },
       "SubscriptionItemEntity": {
         "type": "object",
@@ -1125,7 +1224,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1145,7 +1248,11 @@
             "description": "The number of units for the subscription item."
           }
         },
-        "required": ["id", "mode", "object"]
+        "required": [
+          "id",
+          "mode",
+          "object"
+        ]
       },
       "TransactionEntity": {
         "type": "object",
@@ -1156,7 +1263,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1261,7 +1372,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1394,14 +1509,20 @@
         "properties": {
           "mode": {
             "type": "string",
-            "description": "The mode of cancellation (immediate or scheduled), default is immediate",
-            "enum": ["immediate", "scheduled"],
+            "description": "The mode of cancellation (immediate or scheduled), default can be configured in the store billing settings.",
+            "enum": [
+              "immediate",
+              "scheduled"
+            ],
             "example": "immediate"
           },
           "onExecute": {
             "type": "string",
             "description": "The action to execute when canceling (cancel or pause) when mode is scheduled, ignored when mode is immediate or not provided",
-            "enum": ["cancel", "pause"],
+            "enum": [
+              "cancel",
+              "pause"
+            ],
             "example": "cancel"
           }
         }
@@ -1468,7 +1589,9 @@
             "default": "proration-charge-immediately"
           }
         },
-        "required": ["product_id"]
+        "required": [
+          "product_id"
+        ]
       },
       "OrderEntity": {
         "type": "object",
@@ -1479,7 +1602,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1557,14 +1684,20 @@
           "status": {
             "type": "string",
             "description": "Current status of the order.",
-            "enum": ["pending", "paid"],
+            "enum": [
+              "pending",
+              "paid"
+            ],
             "example": "pending"
           },
           "type": {
             "type": "string",
             "description": "The type of order. This can specify whether it's a regular purchase, subscription, etc.",
             "example": "recurring",
-            "enum": ["recurring", "onetime"]
+            "enum": [
+              "recurring",
+              "onetime"
+            ]
           },
           "affiliate": {
             "type": "string",
@@ -1602,7 +1735,10 @@
           "type": {
             "type": "string",
             "description": "The type of the field.",
-            "enum": ["text", "checkbox"]
+            "enum": [
+              "text",
+              "checkbox"
+            ]
           },
           "key": {
             "type": "string",
@@ -1635,7 +1771,11 @@
             ]
           }
         },
-        "required": ["type", "key", "label"]
+        "required": [
+          "type",
+          "key",
+          "label"
+        ]
       },
       "LicenseInstanceEntity": {
         "type": "object",
@@ -1646,7 +1786,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1662,7 +1806,10 @@
           "status": {
             "type": "string",
             "description": "The status of the license instance.",
-            "enum": ["active", "deactivated"],
+            "enum": [
+              "active",
+              "deactivated"
+            ],
             "example": "active"
           },
           "created_at": {
@@ -1672,7 +1819,14 @@
             "example": "2023-09-13T00:00:00Z"
           }
         },
-        "required": ["id", "mode", "object", "name", "status", "created_at"]
+        "required": [
+          "id",
+          "mode",
+          "object",
+          "name",
+          "status",
+          "created_at"
+        ]
       },
       "LicenseEntity": {
         "type": "object",
@@ -1683,7 +1837,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1693,7 +1851,12 @@
           "status": {
             "type": "string",
             "description": "The current status of the license key.",
-            "enum": ["inactive", "active", "expired", "disabled"],
+            "enum": [
+              "inactive",
+              "active",
+              "expired",
+              "disabled"
+            ],
             "example": "active"
           },
           "key": {
@@ -1756,7 +1919,9 @@
             ]
           }
         },
-        "required": ["license"]
+        "required": [
+          "license"
+        ]
       },
       "CheckoutEntity": {
         "type": "object",
@@ -1767,7 +1932,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1777,7 +1946,12 @@
           "status": {
             "type": "string",
             "description": "Status of the checkout.",
-            "enum": ["pending", "processing", "completed", "expired"],
+            "enum": [
+              "pending",
+              "processing",
+              "completed",
+              "expired"
+            ],
             "example": "completed"
           },
           "request_id": {
@@ -1865,7 +2039,13 @@
             "additionalProperties": true
           }
         },
-        "required": ["id", "mode", "object", "status", "product"]
+        "required": [
+          "id",
+          "mode",
+          "object",
+          "status",
+          "product"
+        ]
       },
       "CustomerRequestEntity": {
         "type": "object",
@@ -1934,7 +2114,9 @@
             "additionalProperties": true
           }
         },
-        "required": ["product_id"]
+        "required": [
+          "product_id"
+        ]
       },
       "ActivateLicenseRequestEntity": {
         "type": "object",
@@ -1948,7 +2130,10 @@
             "description": "A label for the new instance to identify it in Creem."
           }
         },
-        "required": ["key", "instance_name"]
+        "required": [
+          "key",
+          "instance_name"
+        ]
       },
       "DeactivateLicenseRequestEntity": {
         "type": "object",
@@ -1962,7 +2147,10 @@
             "description": "Id of the instance to deactivate."
           }
         },
-        "required": ["key", "instance_id"]
+        "required": [
+          "key",
+          "instance_id"
+        ]
       },
       "ValidateLicenseRequestEntity": {
         "type": "object",
@@ -1976,7 +2164,10 @@
             "description": "Id of the instance to validate."
           }
         },
-        "required": ["key", "instance_id"]
+        "required": [
+          "key",
+          "instance_id"
+        ]
       },
       "DiscountEntity": {
         "type": "object",
@@ -1987,7 +2178,11 @@
           },
           "mode": {
             "type": "string",
-            "enum": ["test", "prod", "sandbox"],
+            "enum": [
+              "test",
+              "prod",
+              "sandbox"
+            ],
             "description": "String representing the environment."
           },
           "object": {
@@ -1998,7 +2193,12 @@
           "status": {
             "type": "string",
             "description": "The status of the discount (e.g., active, inactive).",
-            "enum": ["active", "draft", "expired", "scheduled"],
+            "enum": [
+              "active",
+              "draft",
+              "expired",
+              "scheduled"
+            ],
             "example": "active"
           },
           "name": {
@@ -2014,7 +2214,10 @@
           "type": {
             "type": "string",
             "description": "The type of the discount, either \"percentage\" or \"fixed\".",
-            "enum": ["percentage", "fixed"],
+            "enum": [
+              "percentage",
+              "fixed"
+            ],
             "example": "percentage"
           },
           "amount": {
@@ -2046,7 +2249,11 @@
           "duration": {
             "type": "string",
             "description": "The duration type for the discount.",
-            "enum": ["forever", "once", "repeating"],
+            "enum": [
+              "forever",
+              "once",
+              "repeating"
+            ],
             "example": "repeating"
           },
           "duration_in_months": {
@@ -2056,7 +2263,10 @@
           },
           "applies_to_products": {
             "description": "The list of product IDs to which this discount applies.",
-            "example": ["prod_123", "prod_456"],
+            "example": [
+              "prod_123",
+              "prod_456"
+            ],
             "type": "array",
             "items": {
               "type": "string"
@@ -2068,7 +2278,15 @@
             "example": 15
           }
         },
-        "required": ["id", "mode", "object", "status", "name", "code", "type"]
+        "required": [
+          "id",
+          "mode",
+          "object",
+          "status",
+          "name",
+          "code",
+          "type"
+        ]
       },
       "CreateDiscountRequestEntity": {
         "type": "object",
@@ -2086,7 +2304,10 @@
           "type": {
             "type": "string",
             "description": "The type of the discount, either \"percentage\" or \"fixed\".",
-            "enum": ["percentage", "fixed"]
+            "enum": [
+              "percentage",
+              "fixed"
+            ]
           },
           "amount": {
             "type": "number",
@@ -2117,7 +2338,11 @@
           "duration": {
             "type": "string",
             "description": "The duration type for the discount.",
-            "enum": ["forever", "once", "repeating"],
+            "enum": [
+              "forever",
+              "once",
+              "repeating"
+            ],
             "example": "repeating"
           },
           "duration_in_months": {
@@ -2127,14 +2352,22 @@
           },
           "applies_to_products": {
             "description": "The list of product IDs to which this discount applies.",
-            "example": ["prod_123", "prod_456"],
+            "example": [
+              "prod_123",
+              "prod_456"
+            ],
             "type": "array",
             "items": {
               "type": "string"
             }
           }
         },
-        "required": ["name", "type", "duration", "applies_to_products"]
+        "required": [
+          "name",
+          "type",
+          "duration",
+          "applies_to_products"
+        ]
       },
       "TransactionListEntity": {
         "type": "object",
@@ -2155,7 +2388,10 @@
             ]
           }
         },
-        "required": ["items", "pagination"]
+        "required": [
+          "items",
+          "pagination"
+        ]
       }
     },
     "securitySchemes": {
